namespace BusinessLayer.Models.InputModels;
public class AuthorDto
{
    public int? Id { get; set; }
    public string FirstName { get; set; }
    public string LastName { get; set; }
}
