namespace BusinessLayer.Models.InputModels;
public class GenreDto
{
    public int? Id { get; set; }
    public string Name { get; set; }
}
