namespace BusinessLayer.Models.InputModels;
public class ShopItemDto
{
    public int BookId { get; set; }
    public int Stock { get; set; }
    public decimal Price { get; set; }
}
